style.css
* {
    box-sizing: border-box;
}

/* HEADER */

body {
    margin: 0;
    padding: 0;
    display: block;
    overflow: auto;
    background-color: rgb(51, 165, 173);
}

.header {
    margin: 0;
    padding: 4px 16px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: black;
    position: fixed;
    width: 100%;
}

.header .logo {
    font-size: 24px;
    font-weight: bold;
    color: aquamarine;
}

a {
    text-decoration: none;
    color: rgb(255, 255, 255);
}

ul {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
    gap: 16px;
}

/* FIRST CONTAINER */

.first-container {
    display: flex;
    justify-content: center;
    align-content: center;
}

.first-container .intro {
    display: flex;
    gap: 36px;
    justify-content: center;
    align-items: center;
    margin-top: 40px;
}

.first-container .first-button {
    background: royalblue;
    border-radius: 15px;
    color: white;
    padding-block: 4px;
    cursor: pointer;
}

.first-container .title {
    font-size: 36px;
    font-weight: bold;
}

.first-container img {
    width: 100px;
    height: auto;
    border-radius: 15px;
}

/* SECOND CONTAINER */

.second-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: rgb(28, 52, 187);
    height: 400px;
}

.second-container .title {
    font-size: 32px;
    font-weight: 500;
    color: beige;
    margin-bottom: 50px;
}

.second-container .items {
    display: flex;
    justify-content: center;
    align-items: center;
    /* flex-wrap: wrap; */
    gap: 100px;
}

.info {
    max-width: 200px;
}

.info img {
    width: 150px;
    height: 150px;
    border-radius: 15px;
    object-fit: cover;
}

.info .text {
    padding-top: 20px;
    color: aquamarine;
}

/* THIRD CONTAINER */

